src/errors/examples/device-error-example.ts
export const DeviceErrorExample = {
  notFound: {
    statusCode: 404,
    message: 'device not found',
    error: 'Not Found',
  },
};
